syntax = "proto3";

option java_package = "com.san.kir.manger";
option java_multiple_files = true;

message Chapters {
  bool is_title = 1;
  bool is_individual = 2;
  string filter_status = 3;
}
